--- a/src/lib/i18n/locales/ar.json
+++ b/src/lib/i18n/locales/ar.json
@@ -33,6 +33,9 @@
     "reports": "التقارير",
     "analytics": "التحليلات",
     "settings": "الإعدادات",
+    "goals": "الأهداف",
+    "forums": "المنتديات",
+    "folios": "المحافظ",
     "close_sidebar": "إغلاق لوحة الجانب",
     "menu": "القائمة",
     "qr_signin": "تسجيل الدخول برمز QR",
@@ -213,6 +216,104 @@
     "steps": "Steps",
     "homework_notes": "Homework/Notes",
     "lesson_resources": "Lesson Resources"
+  },
+  "goals": {
+    "loading_years": "جاري تحميل السنوات...",
+    "error_loading_years": "خطأ في تحميل السنوات",
+    "no_years_available": "لا توجد سنوات متاحة",
+    "no_years_message": "لا توجد سنوات للعرض.",
+    "loading_goals": "جاري تحميل الأهداف...",
+    "error_loading_goals": "خطأ في تحميل الأهداف",
+    "my_notes": "ملاحظاتي",
+    "overview": "نظرة عامة",
+    "goals": "الأهداف",
+    "goal": "هدف",
+    "support": "الدعم",
+    "action": "الإجراء",
+    "done": "تم",
+    "no_goals": "لا توجد أهداف بعد. انقر على زر + لإضافة واحد.",
+    "notes_saved": "تم حفظ الملاحظات بنجاح",
+    "save_error": "فشل حفظ الملاحظات",
+    "not_enabled": "الأهداف غير متاحة",
+    "not_enabled_message": "الأهداف غير مفعلة لمدرستك. يرجى الاتصال بالمسؤول إذا كنت تعتقد أن هذا خطأ."
+  },
+  "forums": {
+    "loading": "جاري تحميل المنتديات...",
+    "error_loading": "خطأ في تحميل المنتديات",
+    "no_forums": "لا توجد منتديات متاحة",
+    "no_forums_message": "لا توجد منتديات للعرض.",
+    "participants": "مشاركون",
+    "opened": "مفتوح",
+    "closed": "مغلق",
+    "read_comments": "مقروء",
+    "unread_comments": "غير مقروء",
+    "open_forums": "المنتديات المفتوحة",
+    "closed_forums": "المنتديات المغلقة",
+    "add_reply": "إضافة رد",
+    "send": "إرسال",
+    "sending": "جاري الإرسال...",
+    "reply_sent": "تم إرسال الرد بنجاح",
+    "reply_error": "فشل إرسال الرد",
+    "search_placeholder": "البحث في المنتديات...",
+    "search_messages_placeholder": "البحث في الرسائل...",
+    "show_unread_only": "غير المقروء فقط",
+    "sort_opened": "تاريخ الفتح",
+    "sort_title": "العنوان",
+    "sort_owner": "المالك",
+    "sort_participants": "المشاركون",
+    "sort_unread": "عدد غير المقروء",
+    "sort_asc": "ترتيب تصاعدي",
+    "sort_desc": "ترتيب تنازلي",
+    "sort_recent_first": "الأحدث أولاً",
+    "sort_oldest_first": "الأقدم أولاً",
+    "sort_by_author": "حسب المؤلف",
+    "no_messages_match": "لا توجد رسائل تطابق بحثك.",
+    "not_enabled": "المنتديات غير متاحة",
+    "not_enabled_message": "المنتديات غير مفعلة لمدرستك. يرجى الاتصال بالمسؤول إذا كنت تعتقد أن هذا خطأ."
+  },
+  "folios": {
+    "edit_my_folios": "تحرير محافظي",
+    "edit_my_folios_description": "إنشاء وإدارة محافظك الشخصية",
+    "browse_folios": "تصفح المحافظ",
+    "browse_folios_description": "استكشاف وعرض المحافظ المتاحة",
+    "loading": "جاري تحميل المحافظ...",
+    "error_loading": "خطأ في تحميل المحافظ",
+    "no_folios": "لا توجد محافظ متاحة",
+    "no_folios_message": "لا توجد محافظ للعرض.",
+    "published": "منشور",
+    "created": "تم الإنشاء",
+    "updated": "تم التحديث",
+    "unpublished": "غير منشور",
+    "published_folios": "المحافظ المنشورة",
+    "unpublished_folios": "المحافظ غير المنشورة",
+    "saved": "تم حفظ المحفظة بنجاح",
+    "save_error": "فشل حفظ المحفظة",
+    "new_folio": "محفظة جديدة",
+    "creating": "جاري الإنشاء...",
+    "create_error": "فشل إنشاء المحفظة",
+    "tags": "العلامات",
+    "add_tag_placeholder": "إضافة علامة...",
+    "title_placeholder": "محفظة بدون عنوان",
+    "allow_comments": "السماح بالتعليقات",
+    "publish": "نشر",
+    "unpublish": "إلغاء النشر",
+    "publishing": "جاري النشر...",
+    "publish_error": "فشل نشر/إلغاء نشر المحفظة",
+    "comments": "التعليقات",
+    "loading_comments": "جاري تحميل التعليقات...",
+    "no_comments": "لا توجد تعليقات بعد. كن أول من يعلق!",
+    "add_comment": "إضافة تعليق",
+    "comment_sent": "تم إرسال التعليق بنجاح",
+    "comment_error": "فشل إرسال التعليق",
+    "delete": "حذف",
+    "delete_folio": "حذف المحفظة",
+    "delete_confirmation": "هل أنت متأكد أنك تريد حذف",
+    "delete_warning": "لا يمكن التراجع عن هذا الإجراء.",
+    "deleting": "جاري الحذف...",
+    "deleted": "تم حذف المحفظة بنجاح",
+    "delete_error": "فشل حذف المحفظة",
+    "not_enabled": "المحافظ غير مفعلة",
+    "not_enabled_message": "المحافظ غير مفعلة لحسابك."
   },
   "assessments": {
     "year": "Year:",
