--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -33,6 +33,9 @@
     "reports": "Berichte",
     "analytics": "Analysen",
     "settings": "Einstellungen",
+    "goals": "Ziele",
+    "forums": "Foren",
+    "folios": "Portfolios",
     "close_sidebar": "Seitenleiste schließen",
     "menu": "Menü",
     "qr_signin": "QR-Anmeldung",
@@ -171,6 +174,104 @@
     "steps": "Schritte",
     "homework_notes": "Hausaufgaben/Notizen",
     "lesson_resources": "Stundenressourcen"
+  },
+  "goals": {
+    "loading_years": "Jahre werden geladen...",
+    "error_loading_years": "Fehler beim Laden der Jahre",
+    "no_years_available": "Keine Jahre verfügbar",
+    "no_years_message": "Es gibt keine Jahre zum Anzeigen.",
+    "loading_goals": "Ziele werden geladen...",
+    "error_loading_goals": "Fehler beim Laden der Ziele",
+    "my_notes": "Meine Notizen",
+    "overview": "Übersicht",
+    "goals": "Ziele",
+    "goal": "Ziel",
+    "support": "Unterstützung",
+    "action": "Aktion",
+    "done": "Erledigt",
+    "no_goals": "Noch keine Ziele. Klicken Sie auf die + Schaltfläche, um eines hinzuzufügen.",
+    "notes_saved": "Notizen erfolgreich gespeichert",
+    "save_error": "Notizen konnten nicht gespeichert werden",
+    "not_enabled": "Ziele nicht verfügbar",
+    "not_enabled_message": "Ziele sind für Ihre Schule nicht aktiviert. Bitte wenden Sie sich an Ihren Administrator, wenn Sie glauben, dass dies ein Fehler ist."
+  },
+  "forums": {
+    "loading": "Foren werden geladen...",
+    "error_loading": "Fehler beim Laden der Foren",
+    "no_forums": "Keine Foren verfügbar",
+    "no_forums_message": "Es gibt keine Foren zum Anzeigen.",
+    "participants": "Teilnehmer",
+    "opened": "Geöffnet",
+    "closed": "Geschlossen",
+    "read_comments": "gelesen",
+    "unread_comments": "ungelesen",
+    "open_forums": "Offene Foren",
+    "closed_forums": "Geschlossene Foren",
+    "add_reply": "Antwort hinzufügen",
+    "send": "Senden",
+    "sending": "Wird gesendet...",
+    "reply_sent": "Antwort erfolgreich gesendet",
+    "reply_error": "Antwort konnte nicht gesendet werden",
+    "search_placeholder": "Foren durchsuchen...",
+    "search_messages_placeholder": "Nachrichten durchsuchen...",
+    "show_unread_only": "Nur ungelesene",
+    "sort_opened": "Öffnungsdatum",
+    "sort_title": "Titel",
+    "sort_owner": "Besitzer",
+    "sort_participants": "Teilnehmer",
+    "sort_unread": "Anzahl ungelesener",
+    "sort_asc": "Aufsteigend sortieren",
+    "sort_desc": "Absteigend sortieren",
+    "sort_recent_first": "Neueste zuerst",
+    "sort_oldest_first": "Älteste zuerst",
+    "sort_by_author": "Nach Autor",
+    "no_messages_match": "Keine Nachrichten entsprechen Ihrer Suche.",
+    "not_enabled": "Foren nicht verfügbar",
+    "not_enabled_message": "Foren sind für Ihre Schule nicht aktiviert. Bitte wenden Sie sich an Ihren Administrator, wenn Sie glauben, dass dies ein Fehler ist."
+  },
+  "folios": {
+    "edit_my_folios": "Meine Portfolios bearbeiten",
+    "edit_my_folios_description": "Erstellen und verwalten Sie Ihre persönlichen Portfolios",
+    "browse_folios": "Portfolios durchsuchen",
+    "browse_folios_description": "Verfügbare Portfolios erkunden und anzeigen",
+    "loading": "Portfolios werden geladen...",
+    "error_loading": "Fehler beim Laden der Portfolios",
+    "no_folios": "Keine Portfolios verfügbar",
+    "no_folios_message": "Es gibt keine Portfolios zum Anzeigen.",
+    "published": "Veröffentlicht",
+    "created": "Erstellt",
+    "updated": "Aktualisiert",
+    "unpublished": "Nicht veröffentlicht",
+    "published_folios": "Veröffentlichte Portfolios",
+    "unpublished_folios": "Nicht veröffentlichte Portfolios",
+    "saved": "Portfolio erfolgreich gespeichert",
+    "save_error": "Portfolio konnte nicht gespeichert werden",
+    "new_folio": "Neues Portfolio",
+    "creating": "Wird erstellt...",
+    "create_error": "Portfolio konnte nicht erstellt werden",
+    "tags": "TAGS",
+    "add_tag_placeholder": "Tag hinzufügen...",
+    "title_placeholder": "Unbenanntes Portfolio",
+    "allow_comments": "Kommentare zulassen",
+    "publish": "Veröffentlichen",
+    "unpublish": "Veröffentlichung aufheben",
+    "publishing": "Wird veröffentlicht...",
+    "publish_error": "Portfolio konnte nicht veröffentlicht/Veröffentlichung aufgehoben werden",
+    "comments": "Kommentare",
+    "loading_comments": "Kommentare werden geladen...",
+    "no_comments": "Noch keine Kommentare. Seien Sie der Erste, der kommentiert!",
+    "add_comment": "Kommentar hinzufügen",
+    "comment_sent": "Kommentar erfolgreich gesendet",
+    "comment_error": "Kommentar konnte nicht gesendet werden",
+    "delete": "Löschen",
+    "delete_folio": "Portfolio löschen",
+    "delete_confirmation": "Möchten Sie wirklich löschen",
+    "delete_warning": "Diese Aktion kann nicht rückgängig gemacht werden.",
+    "deleting": "Wird gelöscht...",
+    "deleted": "Portfolio erfolgreich gelöscht",
+    "delete_error": "Portfolio konnte nicht gelöscht werden",
+    "not_enabled": "Portfolios nicht aktiviert",
+    "not_enabled_message": "Portfolios sind für Ihr Konto nicht aktiviert."
   },
   "assessments": {
     "year": "Jahr:",
