--- a/src/lib/i18n/locales/en-pirate.json
+++ b/src/lib/i18n/locales/en-pirate.json
@@ -33,6 +33,9 @@
     "reports": "Captain's log",
     "analytics": "Treasure inventory",
     "settings": "Ship's orders",
+    "goals": "Treasure goals",
+    "forums": "Crew forums",
+    "folios": "Treasure folios",
     "close_sidebar": "Stow the side panel",
     "menu": "Ship's menu",
     "qr_signin": "Treasure map signin",
@@ -174,6 +177,104 @@
     "steps": "Navigation Steps",
     "homework_notes": "Ship's Log/Notes",
     "lesson_resources": "Lesson Treasure"
+  },
+  "goals": {
+    "loading_years": "Loadin' years...",
+    "error_loading_years": "Error loadin' years",
+    "no_years_available": "No years available",
+    "no_years_message": "There be no years to display.",
+    "loading_goals": "Loadin' treasure goals...",
+    "error_loading_goals": "Error loadin' treasure goals",
+    "my_notes": "Me notes",
+    "overview": "Overview",
+    "goals": "Treasure Goals",
+    "goal": "Goal",
+    "support": "Support",
+    "action": "Action",
+    "done": "Done",
+    "no_goals": "No goals yet. Click the + button to add one.",
+    "notes_saved": "Notes saved successfully",
+    "save_error": "Failed to save notes",
+    "not_enabled": "Treasure goals not available",
+    "not_enabled_message": "Treasure goals be not enabled for yer school. Please contact yer administrator if ye believe this be an error."
+  },
+  "forums": {
+    "loading": "Loadin' crew forums...",
+    "error_loading": "Error loadin' crew forums",
+    "no_forums": "No crew forums available",
+    "no_forums_message": "There be no crew forums to display.",
+    "participants": "crew members",
+    "opened": "Opened",
+    "closed": "Closed",
+    "read_comments": "read",
+    "unread_comments": "unread",
+    "open_forums": "Open Crew Forums",
+    "closed_forums": "Closed Crew Forums",
+    "add_reply": "Add Reply",
+    "send": "Send",
+    "sending": "Sendin'...",
+    "reply_sent": "Reply sent successfully",
+    "reply_error": "Failed to send reply",
+    "search_placeholder": "Search crew forums...",
+    "search_messages_placeholder": "Search messages...",
+    "show_unread_only": "Unread only",
+    "sort_opened": "Date Opened",
+    "sort_title": "Title",
+    "sort_owner": "Owner",
+    "sort_participants": "Crew Members",
+    "sort_unread": "Unread Count",
+    "sort_asc": "Sort ascending",
+    "sort_desc": "Sort descending",
+    "sort_recent_first": "Most recent first",
+    "sort_oldest_first": "Oldest first",
+    "sort_by_author": "By author",
+    "no_messages_match": "No messages match yer search.",
+    "not_enabled": "Crew forums not available",
+    "not_enabled_message": "Crew forums be not enabled for yer school. Please contact yer administrator if ye believe this be an error."
+  },
+  "folios": {
+    "edit_my_folios": "Edit Me Treasure Folios",
+    "edit_my_folios_description": "Create and manage yer personal treasure folios",
+    "browse_folios": "Browse Treasure Folios",
+    "browse_folios_description": "Explore and view available treasure folios",
+    "loading": "Loadin' treasure folios...",
+    "error_loading": "Error loadin' treasure folios",
+    "no_folios": "No treasure folios available",
+    "no_folios_message": "There be no treasure folios to display.",
+    "published": "Published",
+    "created": "Created",
+    "updated": "Updated",
+    "unpublished": "Unpublished",
+    "published_folios": "Published Treasure Folios",
+    "unpublished_folios": "Unpublished Treasure Folios",
+    "saved": "Treasure folio saved successfully",
+    "save_error": "Failed to save treasure folio",
+    "new_folio": "New Treasure Folio",
+    "creating": "Creatin'...",
+    "create_error": "Failed to create treasure folio",
+    "tags": "TAGS",
+    "add_tag_placeholder": "Add a tag...",
+    "title_placeholder": "Untitled treasure folio",
+    "allow_comments": "Allow Comments",
+    "publish": "Publish",
+    "unpublish": "Unpublish",
+    "publishing": "Publishin'...",
+    "publish_error": "Failed to publish/unpublish treasure folio",
+    "comments": "Comments",
+    "loading_comments": "Loadin' comments...",
+    "no_comments": "No comments yet. Be the first to comment!",
+    "add_comment": "Add Comment",
+    "comment_sent": "Comment sent successfully",
+    "comment_error": "Failed to send comment",
+    "delete": "Delete",
+    "delete_folio": "Delete Treasure Folio",
+    "delete_confirmation": "Be ye sure ye want to delete",
+    "delete_warning": "This action cannot be undone.",
+    "deleting": "Deletin'...",
+    "deleted": "Treasure folio deleted successfully",
+    "delete_error": "Failed to delete treasure folio",
+    "not_enabled": "Treasure Folios Not Enabled",
+    "not_enabled_message": "Treasure folios be not enabled for yer account."
   },
   "assessments": {
     "year": "Voyage Year:",
