--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -33,6 +33,9 @@
     "reports": "Informes",
     "analytics": "Análisis",
     "settings": "Configuración",
+    "goals": "Objetivos",
+    "forums": "Foros",
+    "folios": "Portafolios",
     "close_sidebar": "Cerrar barra lateral",
     "menu": "Menú",
     "qr_signin": "Inicio QR",
@@ -171,6 +174,104 @@
     "steps": "Pasos",
     "homework_notes": "Tareas/Notas",
     "lesson_resources": "Recursos de la Lección"
+  },
+  "goals": {
+    "loading_years": "Cargando años...",
+    "error_loading_years": "Error al cargar los años",
+    "no_years_available": "No hay años disponibles",
+    "no_years_message": "No hay años para mostrar.",
+    "loading_goals": "Cargando objetivos...",
+    "error_loading_goals": "Error al cargar los objetivos",
+    "my_notes": "Mis notas",
+    "overview": "Resumen",
+    "goals": "Objetivos",
+    "goal": "Objetivo",
+    "support": "Apoyo",
+    "action": "Acción",
+    "done": "Hecho",
+    "no_goals": "Aún no hay objetivos. Haz clic en el botón + para agregar uno.",
+    "notes_saved": "Notas guardadas exitosamente",
+    "save_error": "Error al guardar las notas",
+    "not_enabled": "Objetivos no disponibles",
+    "not_enabled_message": "Los objetivos no están habilitados para su escuela. Por favor, contacte a su administrador si cree que esto es un error."
+  },
+  "forums": {
+    "loading": "Cargando foros...",
+    "error_loading": "Error al cargar los foros",
+    "no_forums": "No hay foros disponibles",
+    "no_forums_message": "No hay foros para mostrar.",
+    "participants": "participantes",
+    "opened": "Abierto",
+    "closed": "Cerrado",
+    "read_comments": "leído",
+    "unread_comments": "no leído",
+    "open_forums": "Foros Abiertos",
+    "closed_forums": "Foros Cerrados",
+    "add_reply": "Agregar Respuesta",
+    "send": "Enviar",
+    "sending": "Enviando...",
+    "reply_sent": "Respuesta enviada exitosamente",
+    "reply_error": "Error al enviar la respuesta",
+    "search_placeholder": "Buscar foros...",
+    "search_messages_placeholder": "Buscar mensajes...",
+    "show_unread_only": "Solo no leídos",
+    "sort_opened": "Fecha de Apertura",
+    "sort_title": "Título",
+    "sort_owner": "Propietario",
+    "sort_participants": "Participantes",
+    "sort_unread": "Recuento de No Leídos",
+    "sort_asc": "Ordenar ascendente",
+    "sort_desc": "Ordenar descendente",
+    "sort_recent_first": "Más recientes primero",
+    "sort_oldest_first": "Más antiguos primero",
+    "sort_by_author": "Por autor",
+    "no_messages_match": "No hay mensajes que coincidan con su búsqueda.",
+    "not_enabled": "Foros no disponibles",
+    "not_enabled_message": "Los foros no están habilitados para su escuela. Por favor, contacte a su administrador si cree que esto es un error."
+  },
+  "folios": {
+    "edit_my_folios": "Editar Mis Portafolios",
+    "edit_my_folios_description": "Cree y administre sus portafolios personales",
+    "browse_folios": "Navegar Portafolios",
+    "browse_folios_description": "Explore y visualice portafolios disponibles",
+    "loading": "Cargando portafolios...",
+    "error_loading": "Error al cargar los portafolios",
+    "no_folios": "No hay portafolios disponibles",
+    "no_folios_message": "No hay portafolios para mostrar.",
+    "published": "Publicado",
+    "created": "Creado",
+    "updated": "Actualizado",
+    "unpublished": "No publicado",
+    "published_folios": "Portafolios Publicados",
+    "unpublished_folios": "Portafolios No Publicados",
+    "saved": "Portafolio guardado exitosamente",
+    "save_error": "Error al guardar el portafolio",
+    "new_folio": "Nuevo Portafolio",
+    "creating": "Creando...",
+    "create_error": "Error al crear el portafolio",
+    "tags": "ETIQUETAS",
+    "add_tag_placeholder": "Agregar una etiqueta...",
+    "title_placeholder": "Portafolio sin título",
+    "allow_comments": "Permitir Comentarios",
+    "publish": "Publicar",
+    "unpublish": "Despublicar",
+    "publishing": "Publicando...",
+    "publish_error": "Error al publicar/despublicar el portafolio",
+    "comments": "Comentarios",
+    "loading_comments": "Cargando comentarios...",
+    "no_comments": "Aún no hay comentarios. ¡Sé el primero en comentar!",
+    "add_comment": "Agregar Comentario",
+    "comment_sent": "Comentario enviado exitosamente",
+    "comment_error": "Error al enviar el comentario",
+    "delete": "Eliminar",
+    "delete_folio": "Eliminar Portafolio",
+    "delete_confirmation": "¿Está seguro de que desea eliminar",
+    "delete_warning": "Esta acción no se puede deshacer.",
+    "deleting": "Eliminando...",
+    "deleted": "Portafolio eliminado exitosamente",
+    "delete_error": "Error al eliminar el portafolio",
+    "not_enabled": "Portafolios No Habilitados",
+    "not_enabled_message": "Los portafolios no están habilitados para su cuenta."
   },
   "assessments": {
     "year": "Año:",
