--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -33,6 +33,9 @@
     "reports": "Rapports",
     "analytics": "Analyses",
     "settings": "Paramètres",
+    "goals": "Objectifs",
+    "forums": "Forums",
+    "folios": "Portfolios",
     "close_sidebar": "Fermer la barre latérale",
     "menu": "Menu",
     "qr_signin": "Connexion QR",
@@ -171,6 +174,104 @@
     "steps": "Étapes",
     "homework_notes": "Devoirs/Notes",
     "lesson_resources": "Ressources du Cours"
+  },
+  "goals": {
+    "loading_years": "Chargement des années...",
+    "error_loading_years": "Erreur lors du chargement des années",
+    "no_years_available": "Aucune année disponible",
+    "no_years_message": "Il n'y a pas d'années à afficher.",
+    "loading_goals": "Chargement des objectifs...",
+    "error_loading_goals": "Erreur lors du chargement des objectifs",
+    "my_notes": "Mes notes",
+    "overview": "Aperçu",
+    "goals": "Objectifs",
+    "goal": "Objectif",
+    "support": "Soutien",
+    "action": "Action",
+    "done": "Terminé",
+    "no_goals": "Aucun objectif pour le moment. Cliquez sur le bouton + pour en ajouter un.",
+    "notes_saved": "Notes enregistrées avec succès",
+    "save_error": "Échec de l'enregistrement des notes",
+    "not_enabled": "Objectifs non disponibles",
+    "not_enabled_message": "Les objectifs ne sont pas activés pour votre école. Veuillez contacter votre administrateur si vous pensez qu'il s'agit d'une erreur."
+  },
+  "forums": {
+    "loading": "Chargement des forums...",
+    "error_loading": "Erreur lors du chargement des forums",
+    "no_forums": "Aucun forum disponible",
+    "no_forums_message": "Il n'y a pas de forums à afficher.",
+    "participants": "participants",
+    "opened": "Ouvert",
+    "closed": "Fermé",
+    "read_comments": "lu",
+    "unread_comments": "non lu",
+    "open_forums": "Forums Ouverts",
+    "closed_forums": "Forums Fermés",
+    "add_reply": "Ajouter une Réponse",
+    "send": "Envoyer",
+    "sending": "Envoi...",
+    "reply_sent": "Réponse envoyée avec succès",
+    "reply_error": "Échec de l'envoi de la réponse",
+    "search_placeholder": "Rechercher dans les forums...",
+    "search_messages_placeholder": "Rechercher dans les messages...",
+    "show_unread_only": "Non lus uniquement",
+    "sort_opened": "Date d'Ouverture",
+    "sort_title": "Titre",
+    "sort_owner": "Propriétaire",
+    "sort_participants": "Participants",
+    "sort_unread": "Nombre de Non Lus",
+    "sort_asc": "Trier par ordre croissant",
+    "sort_desc": "Trier par ordre décroissant",
+    "sort_recent_first": "Plus récents en premier",
+    "sort_oldest_first": "Plus anciens en premier",
+    "sort_by_author": "Par auteur",
+    "no_messages_match": "Aucun message ne correspond à votre recherche.",
+    "not_enabled": "Forums non disponibles",
+    "not_enabled_message": "Les forums ne sont pas activés pour votre école. Veuillez contacter votre administrateur si vous pensez qu'il s'agit d'une erreur."
+  },
+  "folios": {
+    "edit_my_folios": "Modifier Mes Portfolios",
+    "edit_my_folios_description": "Créez et gérez vos portfolios personnels",
+    "browse_folios": "Parcourir les Portfolios",
+    "browse_folios_description": "Explorez et visualisez les portfolios disponibles",
+    "loading": "Chargement des portfolios...",
+    "error_loading": "Erreur lors du chargement des portfolios",
+    "no_folios": "Aucun portfolio disponible",
+    "no_folios_message": "Il n'y a pas de portfolios à afficher.",
+    "published": "Publié",
+    "created": "Créé",
+    "updated": "Mis à jour",
+    "unpublished": "Non publié",
+    "published_folios": "Portfolios Publiés",
+    "unpublished_folios": "Portfolios Non Publiés",
+    "saved": "Portfolio enregistré avec succès",
+    "save_error": "Échec de l'enregistrement du portfolio",
+    "new_folio": "Nouveau Portfolio",
+    "creating": "Création...",
+    "create_error": "Échec de la création du portfolio",
+    "tags": "ÉTIQUETTES",
+    "add_tag_placeholder": "Ajouter une étiquette...",
+    "title_placeholder": "Portfolio sans titre",
+    "allow_comments": "Autoriser les Commentaires",
+    "publish": "Publier",
+    "unpublish": "Dépublier",
+    "publishing": "Publication...",
+    "publish_error": "Échec de la publication/dépublication du portfolio",
+    "comments": "Commentaires",
+    "loading_comments": "Chargement des commentaires...",
+    "no_comments": "Aucun commentaire pour le moment. Soyez le premier à commenter !",
+    "add_comment": "Ajouter un Commentaire",
+    "comment_sent": "Commentaire envoyé avec succès",
+    "comment_error": "Échec de l'envoi du commentaire",
+    "delete": "Supprimer",
+    "delete_folio": "Supprimer le Portfolio",
+    "delete_confirmation": "Êtes-vous sûr de vouloir supprimer",
+    "delete_warning": "Cette action ne peut pas être annulée.",
+    "deleting": "Suppression...",
+    "deleted": "Portfolio supprimé avec succès",
+    "delete_error": "Échec de la suppression du portfolio",
+    "not_enabled": "Portfolios Non Activés",
+    "not_enabled_message": "Les portfolios ne sont pas activés pour votre compte."
   },
   "assessments": {
     "year": "Année :",
