--- a/src/lib/i18n/locales/it.json
+++ b/src/lib/i18n/locales/it.json
@@ -33,6 +33,9 @@
     "reports": "Report",
     "analytics": "Analisi",
     "settings": "Impostazioni",
+    "goals": "Obiettivi",
+    "forums": "Forum",
+    "folios": "Portfolio",
     "close_sidebar": "Chiudi overlay barra laterale",
     "menu": "Menu",
     "qr_signin": "Accedi con QR",
@@ -213,6 +216,104 @@
     "steps": "Passaggi",
     "homework_notes": "Compiti/Note",
     "lesson_resources": "Risorse della Lezione"
+  },
+  "goals": {
+    "loading_years": "Caricamento anni...",
+    "error_loading_years": "Errore nel caricamento degli anni",
+    "no_years_available": "Nessun anno disponibile",
+    "no_years_message": "Non ci sono anni da visualizzare.",
+    "loading_goals": "Caricamento obiettivi...",
+    "error_loading_goals": "Errore nel caricamento degli obiettivi",
+    "my_notes": "Le mie note",
+    "overview": "Panoramica",
+    "goals": "Obiettivi",
+    "goal": "Obiettivo",
+    "support": "Supporto",
+    "action": "Azione",
+    "done": "Fatto",
+    "no_goals": "Nessun obiettivo ancora. Fai clic sul pulsante + per aggiungerne uno.",
+    "notes_saved": "Note salvate con successo",
+    "save_error": "Impossibile salvare le note",
+    "not_enabled": "Obiettivi non disponibili",
+    "not_enabled_message": "Gli obiettivi non sono abilitati per la tua scuola. Contatta l'amministratore se ritieni che si tratti di un errore."
+  },
+  "forums": {
+    "loading": "Caricamento forum...",
+    "error_loading": "Errore nel caricamento dei forum",
+    "no_forums": "Nessun forum disponibile",
+    "no_forums_message": "Non ci sono forum da visualizzare.",
+    "participants": "partecipanti",
+    "opened": "Aperto",
+    "closed": "Chiuso",
+    "read_comments": "letto",
+    "unread_comments": "non letto",
+    "open_forums": "Forum Aperti",
+    "closed_forums": "Forum Chiusi",
+    "add_reply": "Aggiungi Risposta",
+    "send": "Invia",
+    "sending": "Invio...",
+    "reply_sent": "Risposta inviata con successo",
+    "reply_error": "Impossibile inviare la risposta",
+    "search_placeholder": "Cerca forum...",
+    "search_messages_placeholder": "Cerca messaggi...",
+    "show_unread_only": "Solo non letti",
+    "sort_opened": "Data di Apertura",
+    "sort_title": "Titolo",
+    "sort_owner": "Proprietario",
+    "sort_participants": "Partecipanti",
+    "sort_unread": "Conteggio Non Letti",
+    "sort_asc": "Ordina crescente",
+    "sort_desc": "Ordina decrescente",
+    "sort_recent_first": "Più recenti prima",
+    "sort_oldest_first": "Più vecchi prima",
+    "sort_by_author": "Per autore",
+    "no_messages_match": "Nessun messaggio corrisponde alla tua ricerca.",
+    "not_enabled": "Forum non disponibili",
+    "not_enabled_message": "I forum non sono abilitati per la tua scuola. Contatta l'amministratore se ritieni che si tratti di un errore."
+  },
+  "folios": {
+    "edit_my_folios": "Modifica i Miei Portfolio",
+    "edit_my_folios_description": "Crea e gestisci i tuoi portfolio personali",
+    "browse_folios": "Sfoglia Portfolio",
+    "browse_folios_description": "Esplora e visualizza portfolio disponibili",
+    "loading": "Caricamento portfolio...",
+    "error_loading": "Errore nel caricamento dei portfolio",
+    "no_folios": "Nessun portfolio disponibile",
+    "no_folios_message": "Non ci sono portfolio da visualizzare.",
+    "published": "Pubblicato",
+    "created": "Creato",
+    "updated": "Aggiornato",
+    "unpublished": "Non pubblicato",
+    "published_folios": "Portfolio Pubblicati",
+    "unpublished_folios": "Portfolio Non Pubblicati",
+    "saved": "Portfolio salvato con successo",
+    "save_error": "Impossibile salvare il portfolio",
+    "new_folio": "Nuovo Portfolio",
+    "creating": "Creazione...",
+    "create_error": "Impossibile creare il portfolio",
+    "tags": "TAG",
+    "add_tag_placeholder": "Aggiungi un tag...",
+    "title_placeholder": "Portfolio senza titolo",
+    "allow_comments": "Consenti Commenti",
+    "publish": "Pubblica",
+    "unpublish": "Rimuovi Pubblicazione",
+    "publishing": "Pubblicazione...",
+    "publish_error": "Impossibile pubblicare/rimuovere pubblicazione del portfolio",
+    "comments": "Commenti",
+    "loading_comments": "Caricamento commenti...",
+    "no_comments": "Nessun commento ancora. Sii il primo a commentare!",
+    "add_comment": "Aggiungi Commento",
+    "comment_sent": "Commento inviato con successo",
+    "comment_error": "Impossibile inviare il commento",
+    "delete": "Elimina",
+    "delete_folio": "Elimina Portfolio",
+    "delete_confirmation": "Sei sicuro di voler eliminare",
+    "delete_warning": "Questa azione non può essere annullata.",
+    "deleting": "Eliminazione...",
+    "deleted": "Portfolio eliminato con successo",
+    "delete_error": "Impossibile eliminare il portfolio",
+    "not_enabled": "Portfolio Non Abilitati",
+    "not_enabled_message": "I portfolio non sono abilitati per il tuo account."
   },
   "assessments": {
     "year": "Anno:",
