--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -33,6 +33,9 @@
     "reports": "レポート",
     "analytics": "分析",
     "settings": "設定",
+    "goals": "目標",
+    "forums": "フォーラム",
+    "folios": "ポートフォリオ",
     "close_sidebar": "サイドバーを閉じる",
     "menu": "メニュー",
     "qr_signin": "QRサインイン",
@@ -171,6 +174,104 @@
     "steps": "ステップ",
     "homework_notes": "宿題/ノート",
     "lesson_resources": "授業リソース"
+  },
+  "goals": {
+    "loading_years": "年度を読み込み中...",
+    "error_loading_years": "年度の読み込みエラー",
+    "no_years_available": "利用可能な年度がありません",
+    "no_years_message": "表示する年度がありません。",
+    "loading_goals": "目標を読み込み中...",
+    "error_loading_goals": "目標の読み込みエラー",
+    "my_notes": "マイノート",
+    "overview": "概要",
+    "goals": "目標",
+    "goal": "目標",
+    "support": "サポート",
+    "action": "アクション",
+    "done": "完了",
+    "no_goals": "まだ目標がありません。+ボタンをクリックして追加してください。",
+    "notes_saved": "ノートが正常に保存されました",
+    "save_error": "ノートの保存に失敗しました",
+    "not_enabled": "目標が利用できません",
+    "not_enabled_message": "目標が学校で有効になっていません。これがエラーだと思われる場合は、管理者にお問い合わせください。"
+  },
+  "forums": {
+    "loading": "フォーラムを読み込み中...",
+    "error_loading": "フォーラムの読み込みエラー",
+    "no_forums": "利用可能なフォーラムがありません",
+    "no_forums_message": "表示するフォーラムがありません。",
+    "participants": "参加者",
+    "opened": "開いた",
+    "closed": "閉じた",
+    "read_comments": "既読",
+    "unread_comments": "未読",
+    "open_forums": "開いているフォーラム",
+    "closed_forums": "閉じているフォーラム",
+    "add_reply": "返信を追加",
+    "send": "送信",
+    "sending": "送信中...",
+    "reply_sent": "返信が正常に送信されました",
+    "reply_error": "返信の送信に失敗しました",
+    "search_placeholder": "フォーラムを検索...",
+    "search_messages_placeholder": "メッセージを検索...",
+    "show_unread_only": "未読のみ",
+    "sort_opened": "開いた日付",
+    "sort_title": "タイトル",
+    "sort_owner": "所有者",
+    "sort_participants": "参加者",
+    "sort_unread": "未読数",
+    "sort_asc": "昇順で並べ替え",
+    "sort_desc": "降順で並べ替え",
+    "sort_recent_first": "最新を先に",
+    "sort_oldest_first": "古いものを先に",
+    "sort_by_author": "作成者別",
+    "no_messages_match": "検索に一致するメッセージがありません。",
+    "not_enabled": "フォーラムが利用できません",
+    "not_enabled_message": "フォーラムが学校で有効になっていません。これがエラーだと思われる場合は、管理者にお問い合わせください。"
+  },
+  "folios": {
+    "edit_my_folios": "マイポートフォリオを編集",
+    "edit_my_folios_description": "個人のポートフォリオを作成および管理",
+    "browse_folios": "ポートフォリオを閲覧",
+    "browse_folios_description": "利用可能なポートフォリオを探索および表示",
+    "loading": "ポートフォリオを読み込み中...",
+    "error_loading": "ポートフォリオの読み込みエラー",
+    "no_folios": "利用可能なポートフォリオがありません",
+    "no_folios_message": "表示するポートフォリオがありません。",
+    "published": "公開済み",
+    "created": "作成済み",
+    "updated": "更新済み",
+    "unpublished": "未公開",
+    "published_folios": "公開済みポートフォリオ",
+    "unpublished_folios": "未公開ポートフォリオ",
+    "saved": "ポートフォリオが正常に保存されました",
+    "save_error": "ポートフォリオの保存に失敗しました",
+    "new_folio": "新しいポートフォリオ",
+    "creating": "作成中...",
+    "create_error": "ポートフォリオの作成に失敗しました",
+    "tags": "タグ",
+    "add_tag_placeholder": "タグを追加...",
+    "title_placeholder": "タイトルなしのポートフォリオ",
+    "allow_comments": "コメントを許可",
+    "publish": "公開",
+    "unpublish": "公開を解除",
+    "publishing": "公開中...",
+    "publish_error": "ポートフォリオの公開/公開解除に失敗しました",
+    "comments": "コメント",
+    "loading_comments": "コメントを読み込み中...",
+    "no_comments": "まだコメントがありません。最初のコメントを投稿してください！",
+    "add_comment": "コメントを追加",
+    "comment_sent": "コメントが正常に送信されました",
+    "comment_error": "コメントの送信に失敗しました",
+    "delete": "削除",
+    "delete_folio": "ポートフォリオを削除",
+    "delete_confirmation": "削除してもよろしいですか",
+    "delete_warning": "この操作は元に戻せません。",
+    "deleting": "削除中...",
+    "deleted": "ポートフォリオが正常に削除されました",
+    "delete_error": "ポートフォリオの削除に失敗しました",
+    "not_enabled": "ポートフォリオが有効になっていません",
+    "not_enabled_message": "ポートフォリオがアカウントで有効になっていません。"
   },
   "assessments": {
     "year": "年度：",
