--- a/src/lib/i18n/locales/nl.json
+++ b/src/lib/i18n/locales/nl.json
@@ -33,6 +33,9 @@
     "reports": "Rapporten",
     "analytics": "Analyses",
     "settings": "Instellingen",
+    "goals": "Doelen",
+    "forums": "Forums",
+    "folios": "Portefeuilles",
     "close_sidebar": "Zijbalk overlay sluiten",
     "menu": "Menu",
     "qr_signin": "QR Inloggen",
@@ -213,6 +216,104 @@
     "steps": "Steps",
     "homework_notes": "Homework/Notes",
     "lesson_resources": "Lesson Resources"
+  },
+  "goals": {
+    "loading_years": "Jaren laden...",
+    "error_loading_years": "Fout bij het laden van jaren",
+    "no_years_available": "Geen jaren beschikbaar",
+    "no_years_message": "Er zijn geen jaren om weer te geven.",
+    "loading_goals": "Doelen laden...",
+    "error_loading_goals": "Fout bij het laden van doelen",
+    "my_notes": "Mijn notities",
+    "overview": "Overzicht",
+    "goals": "Doelen",
+    "goal": "Doel",
+    "support": "Ondersteuning",
+    "action": "Actie",
+    "done": "Klaar",
+    "no_goals": "Nog geen doelen. Klik op de + knop om er een toe te voegen.",
+    "notes_saved": "Notities succesvol opgeslagen",
+    "save_error": "Notities opslaan mislukt",
+    "not_enabled": "Doelen niet beschikbaar",
+    "not_enabled_message": "Doelen zijn niet ingeschakeld voor uw school. Neem contact op met uw beheerder als u denkt dat dit een fout is."
+  },
+  "forums": {
+    "loading": "Forums laden...",
+    "error_loading": "Fout bij het laden van forums",
+    "no_forums": "Geen forums beschikbaar",
+    "no_forums_message": "Er zijn geen forums om weer te geven.",
+    "participants": "deelnemers",
+    "opened": "Geopend",
+    "closed": "Gesloten",
+    "read_comments": "gelezen",
+    "unread_comments": "ongelezen",
+    "open_forums": "Open Forums",
+    "closed_forums": "Gesloten Forums",
+    "add_reply": "Antwoord toevoegen",
+    "send": "Verzenden",
+    "sending": "Verzenden...",
+    "reply_sent": "Antwoord succesvol verzonden",
+    "reply_error": "Antwoord verzenden mislukt",
+    "search_placeholder": "Zoek in forums...",
+    "search_messages_placeholder": "Zoek in berichten...",
+    "show_unread_only": "Alleen ongelezen",
+    "sort_opened": "Openingsdatum",
+    "sort_title": "Titel",
+    "sort_owner": "Eigenaar",
+    "sort_participants": "Deelnemers",
+    "sort_unread": "Aantal ongelezen",
+    "sort_asc": "Oplopend sorteren",
+    "sort_desc": "Aflopend sorteren",
+    "sort_recent_first": "Meest recent eerst",
+    "sort_oldest_first": "Oudste eerst",
+    "sort_by_author": "Op auteur",
+    "no_messages_match": "Geen berichten komen overeen met uw zoekopdracht.",
+    "not_enabled": "Forums niet beschikbaar",
+    "not_enabled_message": "Forums zijn niet ingeschakeld voor uw school. Neem contact op met uw beheerder als u denkt dat dit een fout is."
+  },
+  "folios": {
+    "edit_my_folios": "Mijn portefeuilles bewerken",
+    "edit_my_folios_description": "Maak en beheer uw persoonlijke portefeuilles",
+    "browse_folios": "Portefeuilles doorbladeren",
+    "browse_folios_description": "Bekijk en bekijk beschikbare portefeuilles",
+    "loading": "Portefeuilles laden...",
+    "error_loading": "Fout bij het laden van portefeuilles",
+    "no_folios": "Geen portefeuilles beschikbaar",
+    "no_folios_message": "Er zijn geen portefeuilles om weer te geven.",
+    "published": "Gepubliceerd",
+    "created": "Aangemaakt",
+    "updated": "Bijgewerkt",
+    "unpublished": "Niet gepubliceerd",
+    "published_folios": "Gepubliceerde Portefeuilles",
+    "unpublished_folios": "Niet-gepubliceerde Portefeuilles",
+    "saved": "Portefeuille succesvol opgeslagen",
+    "save_error": "Portefeuille opslaan mislukt",
+    "new_folio": "Nieuwe Portefeuille",
+    "creating": "Aanmaken...",
+    "create_error": "Portefeuille aanmaken mislukt",
+    "tags": "TAGS",
+    "add_tag_placeholder": "Tag toevoegen...",
+    "title_placeholder": "Naamloze portefeuille",
+    "allow_comments": "Reacties toestaan",
+    "publish": "Publiceren",
+    "unpublish": "Publicatie ongedaan maken",
+    "publishing": "Publiceren...",
+    "publish_error": "Portefeuille publiceren/publicatie ongedaan maken mislukt",
+    "comments": "Reacties",
+    "loading_comments": "Reacties laden...",
+    "no_comments": "Nog geen reacties. Wees de eerste die reageert!",
+    "add_comment": "Reactie toevoegen",
+    "comment_sent": "Reactie succesvol verzonden",
+    "comment_error": "Reactie verzenden mislukt",
+    "delete": "Verwijderen",
+    "delete_folio": "Portefeuille verwijderen",
+    "delete_confirmation": "Weet u zeker dat u wilt verwijderen",
+    "delete_warning": "Deze actie kan niet ongedaan worden gemaakt.",
+    "deleting": "Verwijderen...",
+    "deleted": "Portefeuille succesvol verwijderd",
+    "delete_error": "Portefeuille verwijderen mislukt",
+    "not_enabled": "Portefeuilles niet ingeschakeld",
+    "not_enabled_message": "Portefeuilles zijn niet ingeschakeld voor uw account."
   },
   "assessments": {
     "year": "Year:",
