--- a/src/lib/i18n/locales/pl.json
+++ b/src/lib/i18n/locales/pl.json
@@ -33,6 +33,9 @@
     "reports": "Raporty",
     "analytics": "Analityka",
     "settings": "Ustawienia",
+    "goals": "Cele",
+    "forums": "Fora",
+    "folios": "Portfele",
     "close_sidebar": "Zamknij nakładkę bocznego paska",
     "menu": "Menu",
     "qr_signin": "Logowanie QR",
@@ -213,6 +216,104 @@
     "steps": "Steps",
     "homework_notes": "Homework/Notes",
     "lesson_resources": "Lesson Resources"
+  },
+  "goals": {
+    "loading_years": "Ładowanie lat...",
+    "error_loading_years": "Błąd ładowania lat",
+    "no_years_available": "Brak dostępnych lat",
+    "no_years_message": "Brak lat do wyświetlenia.",
+    "loading_goals": "Ładowanie celów...",
+    "error_loading_goals": "Błąd ładowania celów",
+    "my_notes": "Moje notatki",
+    "overview": "Przegląd",
+    "goals": "Cele",
+    "goal": "Cel",
+    "support": "Wsparcie",
+    "action": "Działanie",
+    "done": "Gotowe",
+    "no_goals": "Brak celów. Kliknij przycisk +, aby dodać jeden.",
+    "notes_saved": "Notatki zapisane pomyślnie",
+    "save_error": "Nie udało się zapisać notatek",
+    "not_enabled": "Cele niedostępne",
+    "not_enabled_message": "Cele nie są włączone dla Twojej szkoły. Skontaktuj się z administratorem, jeśli uważasz, że to błąd."
+  },
+  "forums": {
+    "loading": "Ładowanie forów...",
+    "error_loading": "Błąd ładowania forów",
+    "no_forums": "Brak dostępnych forów",
+    "no_forums_message": "Brak forów do wyświetlenia.",
+    "participants": "uczestnicy",
+    "opened": "Otwarte",
+    "closed": "Zamknięte",
+    "read_comments": "przeczytane",
+    "unread_comments": "nieprzeczytane",
+    "open_forums": "Otwarte fora",
+    "closed_forums": "Zamknięte fora",
+    "add_reply": "Dodaj odpowiedź",
+    "send": "Wyślij",
+    "sending": "Wysyłanie...",
+    "reply_sent": "Odpowiedź wysłana pomyślnie",
+    "reply_error": "Nie udało się wysłać odpowiedzi",
+    "search_placeholder": "Szukaj forów...",
+    "search_messages_placeholder": "Szukaj wiadomości...",
+    "show_unread_only": "Tylko nieprzeczytane",
+    "sort_opened": "Data otwarcia",
+    "sort_title": "Tytuł",
+    "sort_owner": "Właściciel",
+    "sort_participants": "Uczestnicy",
+    "sort_unread": "Liczba nieprzeczytanych",
+    "sort_asc": "Sortuj rosnąco",
+    "sort_desc": "Sortuj malejąco",
+    "sort_recent_first": "Najnowsze najpierw",
+    "sort_oldest_first": "Najstarsze najpierw",
+    "sort_by_author": "Według autora",
+    "no_messages_match": "Brak wiadomości pasujących do wyszukiwania.",
+    "not_enabled": "Fora niedostępne",
+    "not_enabled_message": "Fora nie są włączone dla Twojej szkoły. Skontaktuj się z administratorem, jeśli uważasz, że to błąd."
+  },
+  "folios": {
+    "edit_my_folios": "Edytuj moje portfele",
+    "edit_my_folios_description": "Twórz i zarządzaj swoimi osobistymi portfelami",
+    "browse_folios": "Przeglądaj portfele",
+    "browse_folios_description": "Przeglądaj i wyświetlaj dostępne portfele",
+    "loading": "Ładowanie portfeli...",
+    "error_loading": "Błąd ładowania portfeli",
+    "no_folios": "Brak dostępnych portfeli",
+    "no_folios_message": "Brak portfeli do wyświetlenia.",
+    "published": "Opublikowane",
+    "created": "Utworzone",
+    "updated": "Zaktualizowane",
+    "unpublished": "Nieopublikowane",
+    "published_folios": "Opublikowane portfele",
+    "unpublished_folios": "Nieopublikowane portfele",
+    "saved": "Portfel zapisany pomyślnie",
+    "save_error": "Nie udało się zapisać portfela",
+    "new_folio": "Nowy portfel",
+    "creating": "Tworzenie...",
+    "create_error": "Nie udało się utworzyć portfela",
+    "tags": "TAGI",
+    "add_tag_placeholder": "Dodaj tag...",
+    "title_placeholder": "Portfel bez tytułu",
+    "allow_comments": "Zezwól na komentarze",
+    "publish": "Opublikuj",
+    "unpublish": "Cofnij publikację",
+    "publishing": "Publikowanie...",
+    "publish_error": "Nie udało się opublikować/cofnąć publikacji portfela",
+    "comments": "Komentarze",
+    "loading_comments": "Ładowanie komentarzy...",
+    "no_comments": "Brak komentarzy. Bądź pierwszym, który skomentuje!",
+    "add_comment": "Dodaj komentarz",
+    "comment_sent": "Komentarz wysłany pomyślnie",
+    "comment_error": "Nie udało się wysłać komentarza",
+    "delete": "Usuń",
+    "delete_folio": "Usuń portfel",
+    "delete_confirmation": "Czy na pewno chcesz usunąć",
+    "delete_warning": "Tej akcji nie można cofnąć.",
+    "deleting": "Usuwanie...",
+    "deleted": "Portfel usunięty pomyślnie",
+    "delete_error": "Nie udało się usunąć portfela",
+    "not_enabled": "Portfele nie są włączone",
+    "not_enabled_message": "Portfele nie są włączone dla Twojego konta."
   },
   "assessments": {
     "year": "Year:",
