--- a/src/lib/i18n/locales/pt.json
+++ b/src/lib/i18n/locales/pt.json
@@ -33,6 +33,9 @@
     "reports": "Relatórios",
     "analytics": "Análises",
     "settings": "Configurações",
+    "goals": "Objetivos",
+    "forums": "Fóruns",
+    "folios": "Portfólios",
     "close_sidebar": "Fechar sobreposição da barra lateral",
     "menu": "Menu",
     "qr_signin": "Entrar com QR",
@@ -218,6 +221,104 @@
     "steps": "Etapas",
     "homework_notes": "Tarefas/Notas",
     "lesson_resources": "Recursos da Aula"
+  },
+  "goals": {
+    "loading_years": "Carregando anos...",
+    "error_loading_years": "Erro ao carregar anos",
+    "no_years_available": "Nenhum ano disponível",
+    "no_years_message": "Não há anos para exibir.",
+    "loading_goals": "Carregando objetivos...",
+    "error_loading_goals": "Erro ao carregar objetivos",
+    "my_notes": "Minhas notas",
+    "overview": "Visão geral",
+    "goals": "Objetivos",
+    "goal": "Objetivo",
+    "support": "Suporte",
+    "action": "Ação",
+    "done": "Concluído",
+    "no_goals": "Ainda não há objetivos. Clique no botão + para adicionar um.",
+    "notes_saved": "Notas salvas com sucesso",
+    "save_error": "Falha ao salvar notas",
+    "not_enabled": "Objetivos não disponíveis",
+    "not_enabled_message": "Objetivos não estão habilitados para sua escola. Entre em contato com o administrador se acredita que isso é um erro."
+  },
+  "forums": {
+    "loading": "Carregando fóruns...",
+    "error_loading": "Erro ao carregar fóruns",
+    "no_forums": "Nenhum fórum disponível",
+    "no_forums_message": "Não há fóruns para exibir.",
+    "participants": "participantes",
+    "opened": "Aberto",
+    "closed": "Fechado",
+    "read_comments": "lido",
+    "unread_comments": "não lido",
+    "open_forums": "Fóruns Abertos",
+    "closed_forums": "Fóruns Fechados",
+    "add_reply": "Adicionar Resposta",
+    "send": "Enviar",
+    "sending": "Enviando...",
+    "reply_sent": "Resposta enviada com sucesso",
+    "reply_error": "Falha ao enviar resposta",
+    "search_placeholder": "Pesquisar fóruns...",
+    "search_messages_placeholder": "Pesquisar mensagens...",
+    "show_unread_only": "Apenas não lidos",
+    "sort_opened": "Data de Abertura",
+    "sort_title": "Título",
+    "sort_owner": "Proprietário",
+    "sort_participants": "Participantes",
+    "sort_unread": "Contagem de Não Lidos",
+    "sort_asc": "Ordenar crescente",
+    "sort_desc": "Ordenar decrescente",
+    "sort_recent_first": "Mais recentes primeiro",
+    "sort_oldest_first": "Mais antigos primeiro",
+    "sort_by_author": "Por autor",
+    "no_messages_match": "Nenhuma mensagem corresponde à sua pesquisa.",
+    "not_enabled": "Fóruns não disponíveis",
+    "not_enabled_message": "Fóruns não estão habilitados para sua escola. Entre em contato com o administrador se acredita que isso é um erro."
+  },
+  "folios": {
+    "edit_my_folios": "Editar Meus Portfólios",
+    "edit_my_folios_description": "Crie e gerencie seus portfólios pessoais",
+    "browse_folios": "Navegar Portfólios",
+    "browse_folios_description": "Explore e visualize portfólios disponíveis",
+    "loading": "Carregando portfólios...",
+    "error_loading": "Erro ao carregar portfólios",
+    "no_folios": "Nenhum portfólio disponível",
+    "no_folios_message": "Não há portfólios para exibir.",
+    "published": "Publicado",
+    "created": "Criado",
+    "updated": "Atualizado",
+    "unpublished": "Não publicado",
+    "published_folios": "Portfólios Publicados",
+    "unpublished_folios": "Portfólios Não Publicados",
+    "saved": "Portfólio salvo com sucesso",
+    "save_error": "Falha ao salvar portfólio",
+    "new_folio": "Novo Portfólio",
+    "creating": "Criando...",
+    "create_error": "Falha ao criar portfólio",
+    "tags": "TAGS",
+    "add_tag_placeholder": "Adicionar uma tag...",
+    "title_placeholder": "Portfólio sem título",
+    "allow_comments": "Permitir Comentários",
+    "publish": "Publicar",
+    "unpublish": "Despublicar",
+    "publishing": "Publicando...",
+    "publish_error": "Falha ao publicar/despublicar portfólio",
+    "comments": "Comentários",
+    "loading_comments": "Carregando comentários...",
+    "no_comments": "Ainda não há comentários. Seja o primeiro a comentar!",
+    "add_comment": "Adicionar Comentário",
+    "comment_sent": "Comentário enviado com sucesso",
+    "comment_error": "Falha ao enviar comentário",
+    "delete": "Excluir",
+    "delete_folio": "Excluir Portfólio",
+    "delete_confirmation": "Tem certeza de que deseja excluir",
+    "delete_warning": "Esta ação não pode ser desfeita.",
+    "deleting": "Excluindo...",
+    "deleted": "Portfólio excluído com sucesso",
+    "delete_error": "Falha ao excluir portfólio",
+    "not_enabled": "Portfólios Não Habilitados",
+    "not_enabled_message": "Portfólios não estão habilitados para sua conta."
   },
   "assessments": {
     "year": "Ano:",
