--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -33,6 +33,9 @@
     "reports": "Отчеты",
     "analytics": "Аналитика",
     "settings": "Настройки",
+    "goals": "Цели",
+    "forums": "Форумы",
+    "folios": "Портфолио",
     "close_sidebar": "Закрыть боковую панель",
     "menu": "Меню",
     "qr_signin": "Вход по QR",
@@ -213,6 +216,104 @@
     "steps": "Шаги",
     "homework_notes": "Домашнее задание/Заметки",
     "lesson_resources": "Ресурсы урока"
+  },
+  "goals": {
+    "loading_years": "Загрузка годов...",
+    "error_loading_years": "Ошибка загрузки годов",
+    "no_years_available": "Годы недоступны",
+    "no_years_message": "Нет годов для отображения.",
+    "loading_goals": "Загрузка целей...",
+    "error_loading_goals": "Ошибка загрузки целей",
+    "my_notes": "Мои заметки",
+    "overview": "Обзор",
+    "goals": "Цели",
+    "goal": "Цель",
+    "support": "Поддержка",
+    "action": "Действие",
+    "done": "Готово",
+    "no_goals": "Пока нет целей. Нажмите кнопку +, чтобы добавить одну.",
+    "notes_saved": "Заметки успешно сохранены",
+    "save_error": "Не удалось сохранить заметки",
+    "not_enabled": "Цели недоступны",
+    "not_enabled_message": "Цели не включены для вашей школы. Свяжитесь с администратором, если считаете, что это ошибка."
+  },
+  "forums": {
+    "loading": "Загрузка форумов...",
+    "error_loading": "Ошибка загрузки форумов",
+    "no_forums": "Форумы недоступны",
+    "no_forums_message": "Нет форумов для отображения.",
+    "participants": "участники",
+    "opened": "Открыто",
+    "closed": "Закрыто",
+    "read_comments": "прочитано",
+    "unread_comments": "не прочитано",
+    "open_forums": "Открытые форумы",
+    "closed_forums": "Закрытые форумы",
+    "add_reply": "Добавить ответ",
+    "send": "Отправить",
+    "sending": "Отправка...",
+    "reply_sent": "Ответ успешно отправлен",
+    "reply_error": "Не удалось отправить ответ",
+    "search_placeholder": "Поиск форумов...",
+    "search_messages_placeholder": "Поиск сообщений...",
+    "show_unread_only": "Только непрочитанные",
+    "sort_opened": "Дата открытия",
+    "sort_title": "Название",
+    "sort_owner": "Владелец",
+    "sort_participants": "Участники",
+    "sort_unread": "Количество непрочитанных",
+    "sort_asc": "Сортировать по возрастанию",
+    "sort_desc": "Сортировать по убыванию",
+    "sort_recent_first": "Сначала новые",
+    "sort_oldest_first": "Сначала старые",
+    "sort_by_author": "По автору",
+    "no_messages_match": "Нет сообщений, соответствующих вашему поиску.",
+    "not_enabled": "Форумы недоступны",
+    "not_enabled_message": "Форумы не включены для вашей школы. Свяжитесь с администратором, если считаете, что это ошибка."
+  },
+  "folios": {
+    "edit_my_folios": "Редактировать мои портфолио",
+    "edit_my_folios_description": "Создавайте и управляйте своими личными портфолио",
+    "browse_folios": "Просмотр портфолио",
+    "browse_folios_description": "Просматривайте и просматривайте доступные портфолио",
+    "loading": "Загрузка портфолио...",
+    "error_loading": "Ошибка загрузки портфолио",
+    "no_folios": "Портфолио недоступны",
+    "no_folios_message": "Нет портфолио для отображения.",
+    "published": "Опубликовано",
+    "created": "Создано",
+    "updated": "Обновлено",
+    "unpublished": "Не опубликовано",
+    "published_folios": "Опубликованные портфолио",
+    "unpublished_folios": "Неопубликованные портфолио",
+    "saved": "Портфолио успешно сохранено",
+    "save_error": "Не удалось сохранить портфолио",
+    "new_folio": "Новое портфолио",
+    "creating": "Создание...",
+    "create_error": "Не удалось создать портфолио",
+    "tags": "ТЕГИ",
+    "add_tag_placeholder": "Добавить тег...",
+    "title_placeholder": "Портфолио без названия",
+    "allow_comments": "Разрешить комментарии",
+    "publish": "Опубликовать",
+    "unpublish": "Снять с публикации",
+    "publishing": "Публикация...",
+    "publish_error": "Не удалось опубликовать/снять с публикации портфолио",
+    "comments": "Комментарии",
+    "loading_comments": "Загрузка комментариев...",
+    "no_comments": "Пока нет комментариев. Будьте первым, кто прокомментирует!",
+    "add_comment": "Добавить комментарий",
+    "comment_sent": "Комментарий успешно отправлен",
+    "comment_error": "Не удалось отправить комментарий",
+    "delete": "Удалить",
+    "delete_folio": "Удалить портфолио",
+    "delete_confirmation": "Вы уверены, что хотите удалить",
+    "delete_warning": "Это действие нельзя отменить.",
+    "deleting": "Удаление...",
+    "deleted": "Портфолио успешно удалено",
+    "delete_error": "Не удалось удалить портфолио",
+    "not_enabled": "Портфолио не включены",
+    "not_enabled_message": "Портфолио не включены для вашей учетной записи."
   },
   "assessments": {
     "year": "Год:",
