--- a/src/lib/i18n/locales/tr.json
+++ b/src/lib/i18n/locales/tr.json
@@ -33,6 +33,9 @@
     "reports": "Raporlar",
     "analytics": "Analitik",
     "settings": "Ayarlar",
+    "goals": "Hedefler",
+    "forums": "Forumlar",
+    "folios": "Portföyler",
     "close_sidebar": "Kenar çubuğu kaplamasını kapat",
     "menu": "Menü",
     "qr_signin": "QR ile Giriş",
@@ -213,6 +216,104 @@
     "steps": "Steps",
     "homework_notes": "Homework/Notes",
     "lesson_resources": "Lesson Resources"
+  },
+  "goals": {
+    "loading_years": "Yıllar yükleniyor...",
+    "error_loading_years": "Yıllar yüklenirken hata",
+    "no_years_available": "Yıl mevcut değil",
+    "no_years_message": "Gösterilecek yıl yok.",
+    "loading_goals": "Hedefler yükleniyor...",
+    "error_loading_goals": "Hedefler yüklenirken hata",
+    "my_notes": "Notlarım",
+    "overview": "Genel Bakış",
+    "goals": "Hedefler",
+    "goal": "Hedef",
+    "support": "Destek",
+    "action": "Eylem",
+    "done": "Tamamlandı",
+    "no_goals": "Henüz hedef yok. Bir tane eklemek için + butonuna tıklayın.",
+    "notes_saved": "Notlar başarıyla kaydedildi",
+    "save_error": "Notlar kaydedilemedi",
+    "not_enabled": "Hedefler mevcut değil",
+    "not_enabled_message": "Hedefler okulunuz için etkinleştirilmemiş. Bunun bir hata olduğunu düşünüyorsanız lütfen yöneticinizle iletişime geçin."
+  },
+  "forums": {
+    "loading": "Forumlar yükleniyor...",
+    "error_loading": "Forumlar yüklenirken hata",
+    "no_forums": "Forum mevcut değil",
+    "no_forums_message": "Gösterilecek forum yok.",
+    "participants": "katılımcılar",
+    "opened": "Açık",
+    "closed": "Kapalı",
+    "read_comments": "okundu",
+    "unread_comments": "okunmadı",
+    "open_forums": "Açık Forumlar",
+    "closed_forums": "Kapalı Forumlar",
+    "add_reply": "Yanıt Ekle",
+    "send": "Gönder",
+    "sending": "Gönderiliyor...",
+    "reply_sent": "Yanıt başarıyla gönderildi",
+    "reply_error": "Yanıt gönderilemedi",
+    "search_placeholder": "Forumlarda ara...",
+    "search_messages_placeholder": "Mesajlarda ara...",
+    "show_unread_only": "Sadece okunmamış",
+    "sort_opened": "Açılış Tarihi",
+    "sort_title": "Başlık",
+    "sort_owner": "Sahip",
+    "sort_participants": "Katılımcılar",
+    "sort_unread": "Okunmamış Sayısı",
+    "sort_asc": "Artan sıralama",
+    "sort_desc": "Azalan sıralama",
+    "sort_recent_first": "En yeniler önce",
+    "sort_oldest_first": "En eskiler önce",
+    "sort_by_author": "Yazara göre",
+    "no_messages_match": "Aramanızla eşleşen mesaj yok.",
+    "not_enabled": "Forumlar mevcut değil",
+    "not_enabled_message": "Forumlar okulunuz için etkinleştirilmemiş. Bunun bir hata olduğunu düşünüyorsanız lütfen yöneticinizle iletişime geçin."
+  },
+  "folios": {
+    "edit_my_folios": "Portföylerimi Düzenle",
+    "edit_my_folios_description": "Kişisel portföylerinizi oluşturun ve yönetin",
+    "browse_folios": "Portföyleri Gözat",
+    "browse_folios_description": "Mevcut portföyleri keşfedin ve görüntüleyin",
+    "loading": "Portföyler yükleniyor...",
+    "error_loading": "Portföyler yüklenirken hata",
+    "no_folios": "Portföy mevcut değil",
+    "no_folios_message": "Gösterilecek portföy yok.",
+    "published": "Yayınlandı",
+    "created": "Oluşturuldu",
+    "updated": "Güncellendi",
+    "unpublished": "Yayınlanmadı",
+    "published_folios": "Yayınlanan Portföyler",
+    "unpublished_folios": "Yayınlanmayan Portföyler",
+    "saved": "Portföy başarıyla kaydedildi",
+    "save_error": "Portföy kaydedilemedi",
+    "new_folio": "Yeni Portföy",
+    "creating": "Oluşturuluyor...",
+    "create_error": "Portföy oluşturulamadı",
+    "tags": "ETİKETLER",
+    "add_tag_placeholder": "Etiket ekle...",
+    "title_placeholder": "Başlıksız portföy",
+    "allow_comments": "Yorumlara İzin Ver",
+    "publish": "Yayınla",
+    "unpublish": "Yayından Kaldır",
+    "publishing": "Yayınlanıyor...",
+    "publish_error": "Portföy yayınlama/yayından kaldırma başarısız",
+    "comments": "Yorumlar",
+    "loading_comments": "Yorumlar yükleniyor...",
+    "no_comments": "Henüz yorum yok. İlk yorumu siz yapın!",
+    "add_comment": "Yorum Ekle",
+    "comment_sent": "Yorum başarıyla gönderildi",
+    "comment_error": "Yorum gönderilemedi",
+    "delete": "Sil",
+    "delete_folio": "Portföyü Sil",
+    "delete_confirmation": "Silmek istediğinizden emin misiniz",
+    "delete_warning": "Bu işlem geri alınamaz.",
+    "deleting": "Siliniyor...",
+    "deleted": "Portföy başarıyla silindi",
+    "delete_error": "Portföy silinemedi",
+    "not_enabled": "Portföyler Etkinleştirilmemiş",
+    "not_enabled_message": "Portföyler hesabınız için etkinleştirilmemiş."
   },
   "assessments": {
     "year": "Year:",
