--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -33,6 +33,9 @@
     "reports": "报告",
     "analytics": "分析",
     "settings": "设置",
+    "goals": "目标",
+    "forums": "论坛",
+    "folios": "作品集",
     "close_sidebar": "关闭侧边栏",
     "menu": "菜单",
     "qr_signin": "二维码登录",
@@ -171,6 +174,104 @@
     "steps": "步骤",
     "homework_notes": "作业/笔记",
     "lesson_resources": "课程资源"
+  },
+  "goals": {
+    "loading_years": "加载年份...",
+    "error_loading_years": "加载年份时出错",
+    "no_years_available": "没有可用的年份",
+    "no_years_message": "没有要显示的年份。",
+    "loading_goals": "加载目标...",
+    "error_loading_goals": "加载目标时出错",
+    "my_notes": "我的笔记",
+    "overview": "概述",
+    "goals": "目标",
+    "goal": "目标",
+    "support": "支持",
+    "action": "行动",
+    "done": "完成",
+    "no_goals": "还没有目标。点击 + 按钮添加一个。",
+    "notes_saved": "笔记已成功保存",
+    "save_error": "保存笔记失败",
+    "not_enabled": "目标不可用",
+    "not_enabled_message": "目标未为您的学校启用。如果您认为这是错误，请联系管理员。"
+  },
+  "forums": {
+    "loading": "加载论坛...",
+    "error_loading": "加载论坛时出错",
+    "no_forums": "没有可用的论坛",
+    "no_forums_message": "没有要显示的论坛。",
+    "participants": "参与者",
+    "opened": "已打开",
+    "closed": "已关闭",
+    "read_comments": "已读",
+    "unread_comments": "未读",
+    "open_forums": "开放论坛",
+    "closed_forums": "关闭的论坛",
+    "add_reply": "添加回复",
+    "send": "发送",
+    "sending": "发送中...",
+    "reply_sent": "回复已成功发送",
+    "reply_error": "发送回复失败",
+    "search_placeholder": "搜索论坛...",
+    "search_messages_placeholder": "搜索消息...",
+    "show_unread_only": "仅未读",
+    "sort_opened": "打开日期",
+    "sort_title": "标题",
+    "sort_owner": "所有者",
+    "sort_participants": "参与者",
+    "sort_unread": "未读数",
+    "sort_asc": "升序排序",
+    "sort_desc": "降序排序",
+    "sort_recent_first": "最新优先",
+    "sort_oldest_first": "最旧优先",
+    "sort_by_author": "按作者",
+    "no_messages_match": "没有消息与您的搜索匹配。",
+    "not_enabled": "论坛不可用",
+    "not_enabled_message": "论坛未为您的学校启用。如果您认为这是错误，请联系管理员。"
+  },
+  "folios": {
+    "edit_my_folios": "编辑我的作品集",
+    "edit_my_folios_description": "创建和管理您的个人作品集",
+    "browse_folios": "浏览作品集",
+    "browse_folios_description": "探索和查看可用的作品集",
+    "loading": "加载作品集...",
+    "error_loading": "加载作品集时出错",
+    "no_folios": "没有可用的作品集",
+    "no_folios_message": "没有要显示的作品集。",
+    "published": "已发布",
+    "created": "已创建",
+    "updated": "已更新",
+    "unpublished": "未发布",
+    "published_folios": "已发布的作品集",
+    "unpublished_folios": "未发布的作品集",
+    "saved": "作品集已成功保存",
+    "save_error": "保存作品集失败",
+    "new_folio": "新作品集",
+    "creating": "创建中...",
+    "create_error": "创建作品集失败",
+    "tags": "标签",
+    "add_tag_placeholder": "添加标签...",
+    "title_placeholder": "无标题作品集",
+    "allow_comments": "允许评论",
+    "publish": "发布",
+    "unpublish": "取消发布",
+    "publishing": "发布中...",
+    "publish_error": "发布/取消发布作品集失败",
+    "comments": "评论",
+    "loading_comments": "加载评论...",
+    "no_comments": "还没有评论。成为第一个评论的人！",
+    "add_comment": "添加评论",
+    "comment_sent": "评论已成功发送",
+    "comment_error": "发送评论失败",
+    "delete": "删除",
+    "delete_folio": "删除作品集",
+    "delete_confirmation": "您确定要删除",
+    "delete_warning": "此操作无法撤销。",
+    "deleting": "删除中...",
+    "deleted": "作品集已成功删除",
+    "delete_error": "删除作品集失败",
+    "not_enabled": "作品集未启用",
+    "not_enabled_message": "作品集未为您的账户启用。"
   },
   "assessments": {
     "year": "年份：",
