--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -33,6 +33,9 @@
     "reports": "보고서",
     "analytics": "분석",
     "settings": "설정",
+    "goals": "목표",
+    "forums": "포럼",
+    "folios": "포트폴리오",
     "close_sidebar": "사이드바 오버레이 닫기",
     "menu": "메뉴",
     "qr_signin": "QR 로그인",
@@ -213,6 +216,104 @@
     "steps": "Steps",
     "homework_notes": "Homework/Notes",
     "lesson_resources": "Lesson Resources"
+  },
+  "goals": {
+    "loading_years": "연도 로드 중...",
+    "error_loading_years": "연도 로드 오류",
+    "no_years_available": "사용 가능한 연도 없음",
+    "no_years_message": "표시할 연도가 없습니다.",
+    "loading_goals": "목표 로드 중...",
+    "error_loading_goals": "목표 로드 오류",
+    "my_notes": "내 메모",
+    "overview": "개요",
+    "goals": "목표",
+    "goal": "목표",
+    "support": "지원",
+    "action": "행동",
+    "done": "완료",
+    "no_goals": "아직 목표가 없습니다. + 버튼을 클릭하여 추가하세요.",
+    "notes_saved": "메모가 성공적으로 저장되었습니다",
+    "save_error": "메모 저장 실패",
+    "not_enabled": "목표를 사용할 수 없음",
+    "not_enabled_message": "목표가 학교에 대해 활성화되지 않았습니다. 이것이 오류라고 생각되면 관리자에게 문의하세요."
+  },
+  "forums": {
+    "loading": "포럼 로드 중...",
+    "error_loading": "포럼 로드 오류",
+    "no_forums": "사용 가능한 포럼 없음",
+    "no_forums_message": "표시할 포럼이 없습니다.",
+    "participants": "참가자",
+    "opened": "열림",
+    "closed": "닫힘",
+    "read_comments": "읽음",
+    "unread_comments": "읽지 않음",
+    "open_forums": "열린 포럼",
+    "closed_forums": "닫힌 포럼",
+    "add_reply": "답변 추가",
+    "send": "보내기",
+    "sending": "전송 중...",
+    "reply_sent": "답변이 성공적으로 전송되었습니다",
+    "reply_error": "답변 전송 실패",
+    "search_placeholder": "포럼 검색...",
+    "search_messages_placeholder": "메시지 검색...",
+    "show_unread_only": "읽지 않은 항목만",
+    "sort_opened": "열린 날짜",
+    "sort_title": "제목",
+    "sort_owner": "소유자",
+    "sort_participants": "참가자",
+    "sort_unread": "읽지 않은 수",
+    "sort_asc": "오름차순 정렬",
+    "sort_desc": "내림차순 정렬",
+    "sort_recent_first": "최신순",
+    "sort_oldest_first": "오래된순",
+    "sort_by_author": "작성자별",
+    "no_messages_match": "검색과 일치하는 메시지가 없습니다.",
+    "not_enabled": "포럼을 사용할 수 없음",
+    "not_enabled_message": "포럼이 학교에 대해 활성화되지 않았습니다. 이것이 오류라고 생각되면 관리자에게 문의하세요."
+  },
+  "folios": {
+    "edit_my_folios": "내 포트폴리오 편집",
+    "edit_my_folios_description": "개인 포트폴리오 만들기 및 관리",
+    "browse_folios": "포트폴리오 둘러보기",
+    "browse_folios_description": "사용 가능한 포트폴리오 탐색 및 보기",
+    "loading": "포트폴리오 로드 중...",
+    "error_loading": "포트폴리오 로드 오류",
+    "no_folios": "사용 가능한 포트폴리오 없음",
+    "no_folios_message": "표시할 포트폴리오가 없습니다.",
+    "published": "게시됨",
+    "created": "생성됨",
+    "updated": "업데이트됨",
+    "unpublished": "게시 안 됨",
+    "published_folios": "게시된 포트폴리오",
+    "unpublished_folios": "게시되지 않은 포트폴리오",
+    "saved": "포트폴리오가 성공적으로 저장되었습니다",
+    "save_error": "포트폴리오 저장 실패",
+    "new_folio": "새 포트폴리오",
+    "creating": "만드는 중...",
+    "create_error": "포트폴리오 생성 실패",
+    "tags": "태그",
+    "add_tag_placeholder": "태그 추가...",
+    "title_placeholder": "제목 없는 포트폴리오",
+    "allow_comments": "댓글 허용",
+    "publish": "게시",
+    "unpublish": "게시 취소",
+    "publishing": "게시 중...",
+    "publish_error": "포트폴리오 게시/게시 취소 실패",
+    "comments": "댓글",
+    "loading_comments": "댓글 로드 중...",
+    "no_comments": "아직 댓글이 없습니다. 첫 번째 댓글을 작성하세요!",
+    "add_comment": "댓글 추가",
+    "comment_sent": "댓글이 성공적으로 전송되었습니다",
+    "comment_error": "댓글 전송 실패",
+    "delete": "삭제",
+    "delete_folio": "포트폴리오 삭제",
+    "delete_confirmation": "정말로 삭제하시겠습니까",
+    "delete_warning": "이 작업은 취소할 수 없습니다.",
+    "deleting": "삭제 중...",
+    "deleted": "포트폴리오가 성공적으로 삭제되었습니다",
+    "delete_error": "포트폴리오 삭제 실패",
+    "not_enabled": "포트폴리오가 활성화되지 않음",
+    "not_enabled_message": "포트폴리오가 계정에 대해 활성화되지 않았습니다."
   },
   "assessments": {
     "year": "Year:",
